--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
       # Pass the token count used in the translation
       tokens_count_used: "${{ needs.send_to_openai.outputs.tokens_count_used }}"
       # Pass the result of the unit tests
-      unit_test_success: "${{ needs.unit_test.outputs.test_success }}"
+      unit_test_success: "${{ needs.unit_test.outputs.test_success == 'true' }}"
     secrets: inherit ## Important or else secret isnt found in sub workflow
 
  
