--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -12,7 +12,7 @@ on:
     outputs:
       test_success:
         description: 'Whether the unit tests succeeded'
-        value: ${{ jobs.test.outputs.test_success == 'true' }}
+        value: ${{ jobs.test.outputs.test_success }}
 
 jobs:
   test:
