--- a/.github/workflows/notify_slack.yml
+++ b/.github/workflows/notify_slack.yml
@@ -50,7 +50,7 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          custom: |
+          message: |
             Babel translation complete.
             Number of languages translated: ${{ inputs.num_of_languages }}
             Tokens used: ${{ inputs.tokens_count_used }} OpenAI tokens
