--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
           "de"
         ]
       # Specify the GPT model to use for translation
+      # You can also use models like "gpt-3.5-turbo" or "gpt-4-turbo" to reduce costs
       gpt_model: "gpt-4"
       # Instruction for the translation model to ensure quality
       general_instruction: "Please ensure the translations are accurate and contextually appropriate."
