--- a/.github/workflows/notify_slack.yml
+++ b/.github/workflows/notify_slack.yml
@@ -1,17 +1,19 @@
-## Purpose: Sends a notification to Slack upon completion of the other jobs.
+## Purpose: Notify a Slack channel upon the completion of other workflow jobs.
 ## Verification:
-## Workflow File: The notify_slack.yml uses the 8398a7/action-slack@v3 action to send messages to Slack.
+## Workflow File: This notify_slack.yml workflow utilizes the `8398a7/action-slack@v3` GitHub Action to send messages to Slack.
 
-## This workflow performs the following steps:
-## Defines Inputs: It accepts four inputs when the workflow is called:
-## - num_of_languages: The count of languages translated.
-## - tokens_count_used: The number of OpenAI tokens used.
-## - unit_test_success: A boolean flag indicating if unit tests were successful.
-## - slack_webhook: The Slack webhook URL to send the notification.
-## Sends Slack Notification: It uses the `8398a7/action-slack@v3` action to send a notification to your Slack channel with the provided details.
-## Note: Ensure that you have the correct Slack webhook URL when invoking this workflow.
+## Workflow Steps:
 
-name: Notify Slack
+## 1. Define Inputs: The workflow accepts the following inputs when invoked:
+##    - `num_of_languages`: The number of languages translated.
+##    - `tokens_count_used`: The number of OpenAI tokens consumed.
+##    - `unit_test_success`: A boolean indicating the success status of unit tests.
+
+## 2. Send Slack Notification: Utilizes the `8398a7/action-slack@v3` action to send a formatted message to the specified Slack channel with the provided details.
+
+## Note: Ensure that the `SLACK_WEBHOOK_URL` secret is correctly set in the repository to enable successful message dispatch.
+
+name: Notify Slack  # Define the workflow name
 
 on:
   workflow_call:
@@ -27,44 +29,36 @@ on:
       unit_test_success:
         description: 'Unit test success flag'
         required: true
-        type: boolean
+        type: boolean  # Inputs required from the calling workflow
 
 jobs:
   send_slack_notification:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Specify the runner environment
     steps:
-      ## 1. Check if secret is available and print the length
+      ## 1. Check if SLACK_WEBHOOK_URL secret is available
       - name: Ensure SLACK_WEBHOOK_URL is set
         run: |
           if [ -z "$SLACK_WEBHOOK_URL" ]; then
             echo "::error::SLACK_WEBHOOK_URL secret is not set."
-            exit 1
+            exit 1  # Exit if the secret is not set
           else
             length=${#SLACK_WEBHOOK_URL}
             echo "SLACK_WEBHOOK_URL secret is available and has length: $length characters."
           fi
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # Access the secret from repository secrets
 
       ## 2. Send notification to Slack
       - name: Send Slack notification
-        uses: 8398a7/action-slack@v3.16.2
+        uses: 8398a7/action-slack@v3.16.2  # Use the Slack action to send a message
         with:
-          status: ${{ job.status }}
+          status: ${{ job.status }}  # Include the job status (success, failure, etc.)
           text: |
             Babel translation complete.
             Number of languages translated: ${{ inputs.num_of_languages }}
             Tokens used: ${{ inputs.tokens_count_used }} OpenAI tokens
             Testing completed: ${{ inputs.unit_test_success }}
+            # Message content with dynamic inputs
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always() # Ensure the notification is sent even if the job fails or is canceled.
-
-## send slack-channel a notification
-## get num_of_languages count from init params
-## get tokens_count_used in translation from init params 
-## get unit_test_success bool flag from init params
-## send payload to slack with:
-## "Babel translation complete. num_of_languages was translated. tokens_count_used openAI tokens was used. Testing completed: unit_test_success"
-
-### we need unit_test_success, tokens_count_used, num_of_languages, slack_webhook
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # Provide the Slack webhook URL
+        if: always()  # Ensure the notification is sent regardless of job outcome
