--- a/.github/workflows/read_content.yml
+++ b/.github/workflows/read_content.yml
@@ -1,43 +1,44 @@
-## Purpose: Reads the content from the specified file (Sources/Babel/Resources/en.lproj/Localizable.strings) and outputs it for use in downstream jobs.
-## Inputs and Outputs:
-## - Input: input1 - the path to the file to read.
-## - Output: content - the content of the file.
-## Steps:
-## - Checks out the repository using actions/checkout@v3.
-## - Uses guibranco/github-file-reader-action-v2@latest to read the file content.
-## Action Item:
-## - Ensure that the file Sources/Babel/Resources/en.lproj/Localizable.strings exists in your repository and contains the strings to be localized.
-
 ## Workflow: Read Content
-## Purpose: Reads the content from a specified file and outputs it for use in downstream jobs.
+## Purpose: Extracts content from a specified file to be used in subsequent jobs.
+## Inputs:
+## - `input1`: Path to the file to read (e.g., `Sources/Babel/Resources/en.lproj/Localizable.strings`).
+## Outputs:
+## - `content`: The retrieved content from the specified file.
+## Steps:
+## - Checkout the repository using `actions/checkout@v3`.
+## - Read the file content using `guibranco/github-file-reader-action-v2@latest`.
+## Action Item:
+## - Ensure the file at the provided path exists and contains the necessary localization strings.
 
-name: Read Content
+name: Read Content  # Define the name of the workflow
 
 on:
   workflow_call:
     inputs:
       input1:
-        description: 'The input file path to read'
-        required: true
-        type: string
+        description: 'The input file path to read'  # Description of the input parameter
+        required: true  # Input is required
+        type: string  # Input is of type string
     outputs:
       content:
-        description: 'The content of the read file'
-        value: ${{ jobs.read.outputs.content }}
+        description: 'The content of the read file'  # Description of the output parameter
+        value: ${{ jobs.read.outputs.content }}  # Get the output from the job 'read'
 
 jobs:
   read:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Specify the runner environment
     outputs:
-      content: ${{ steps.read_output.outputs.content }}
+      content: ${{ steps.read_output.outputs.content }}  # Export content from the step 'read_output'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Check out the repository code
 
       - name: Read Content
         id: read_output
         run: |
+          # Read the content of the specified file into a variable
           content=$(cat "${{ github.workspace }}/${{ inputs.input1 }}")
+          # Set the output variable 'content' with the file contents
           echo "content<<EOF" >> $GITHUB_OUTPUT
           echo "${content}" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
